# rustats

./: Cargo.toml  README.md
src/: distributions.rs  error.rs  float.rs  fundamental.rs  hypothesis_testings.rs  kernels.rs  lib.rs  matrix.rs  num.rs  plot.rs  range.rs  samplers.rs  selectors.rs
src/distributions/: kde.rs  normal.rs
src/distributions/kde/: kernel.rs  kernels.rs  selectors.rs
