[package]
name = "rustats"
version = "0.0.9"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A statistical library"
homepage = "https://github.com/sile/rustats"
repository = "https://github.com/sile/rustats"
readme = "README.md"
categories = ["science"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/rustats"}
codecov = {repository = "sile/rustats"}

[dependencies]
libm = "0.1"
rand = "0.7"
rand_distr = "0.2"
serde = { version = "1", features = ["derive"], optional = true }
trackable = "0.2"
