[package]
name = "rustats"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A statistical library"
homepage = "https://github.com/sile/rustats"
repository = "https://github.com/sile/rustats"
readme = "README.md"
categories = ["science"]
license = "MIT"

[badges]
coveralls = {repository = "sile/rustracing"}

[dependencies]
libm = "0.2"
rand = "0.7"
rand_distr = "0.2"
